--- a/_posts/2015-01-30-MIT-Q&A.markdown
+++ b/_posts/2015-01-30-MIT-Q&A.markdown
@@ -3,7 +3,7 @@ layout: post
 title:  "关于MIT许可的常见问题及解答"
 date:   2015-01-30
 author: Author
-category: daily
+category: knowledge
 tags: [mit,license]
 ---
 
